Added stupid coaching

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -9,6 +9,12 @@ body {
 
 .coach-class {
   padding-left: 20px;
+  border-width: 10px;
   border-left-color: grey;
   background: wheat
+}
+
+.coach-class h2 {
+  font-style: Helvetica;
+  font-size: 24;
 }
